Antigo/teste/y.output
Terminals unused in grammar

   CERQUILHA
   INCLUIR
   CONSTANTE
   ASPAS_DUPLAS
   ASPAS_SIMPLES


Grammar

    0 $accept: programa $end

    1 programa: tipos_estruturados assinatura_funcoes bloco_principal bloco_funcoes

    2 tipos_estruturados: %empty
    3                   | tipo_estruturado tipos_estruturados

    4 bloco_principal: BPRINCIPAL LCHAVE sentencas RCHAVE

    5 sentencas: %empty
    6          | sentenca PONTOVIRGULA sentencas

    7 assinatura_funcoes: %empty
    8                   | assinatura_funcao PONTOVIRGULA assinatura_funcoes

    9 assinatura_funcao: FUNCAO tipo ID LPARENTESES parametros RPARENTESES

   10 sentenca: comando
   11         | controle
   12         | repeticao

   13 comando: chamada_funcao
   14        | declaracao
   15        | atribuicao
   16        | imprime
   17        | leia

   18 controle: bloco_se
   19         | PARE

   20 bloco_se: se_simplificado
   21         | se_simplificado SENAO LCHAVE sentencas RCHAVE
   22         | se_simplificado SENAO se_simplificado

   23 se_simplificado: SE LPARENTESES expressao RPARENTESES EXECUTE LCHAVE sentencas RCHAVE

   24 imprime: IMPRIME LPARENTESES expressao RPARENTESES

   25 leia: LEIA LPARENTESES termo RPARENTESES

   26 repeticao: bloco_enquanto
   27          | bloco_faca_enquanto
   28          | bloco_para

   29 bloco_enquanto: ENQUANTO LPARENTESES expressao RPARENTESES EXECUTE LCHAVE sentencas RCHAVE

   30 bloco_faca_enquanto: EXECUTE LCHAVE sentencas RCHAVE ENQUANTO LPARENTESES expressao RPARENTESES

   31 bloco_para: PARA LPARENTESES declaracao PONTOVIRGULA expressao PONTOVIRGULA expressao RPARENTESES EXECUTE LCHAVE sentencas RCHAVE

   32 declaracao: tipo ID ATRIB expressao
   33           | tipo ID

   34 atribuicao: ID atribuicao_binaria expressao
   35           | ID atribuicao_unaria

   36 atribuicao_binaria: ATRIB
   37                   | ATRIB_SOMA
   38                   | ATRIB_SUB
   39                   | ATRIB_MULT
   40                   | ATRIB_DIV
   41                   | ATRIB_MOD

   42 atribuicao_unaria: INC
   43                  | DEC

   44 tipo: tipo_primitivo
   45     | tipo_estruturado

   46 tipo_primitivo: INTEIRO
   47               | REAL
   48               | CARACTERE
   49               | VETOR
   50               | TEXTO
   51               | BOOL

   52 tipo_estruturado: MEU_TIPO ID LPARENTESES parametros RPARENTESES
   53                 | VETOR LCOLCHETE LIT_INT RCOLCHETE

   54 bloco_funcoes: %empty
   55              | BFUNCOES LCHAVE funcoes_proc RCHAVE

   56 funcoes_proc: definicoes_funcoes definicoes_procedimentos

   57 definicoes_funcoes: %empty
   58                   | definicao_funcao

   59 definicoes_procedimentos: %empty
   60                         | definicao_procedimento

   61 definicao_funcao: FUNCAO tipo ID parametros LCHAVE sentencas RETORNE termo RCHAVE

   62 definicao_procedimento: PROC ID parametros LCHAVE sentencas RCHAVE

   63 parametros: %empty
   64           | parametro VIRGULA parametros
   65           | parametro

   66 parametro: tipo ID

   67 parametros_chamada: %empty
   68                   | parametro_chamada VIRGULA parametros
   69                   | parametro_chamada

   70 parametro_chamada: ARROBA termo
   71                  | termo

   72 chamada_funcao: ID LPARENTESES parametros_chamada RPARENTESES

   73 expressao: termo
   74          | operador_unario expressao
   75          | termo operador_binario expressao

   76 termo: ID
   77      | literal

   78 literal: LIT_REAL
   79        | LIT_BOOL
   80        | LIT_INT
   81        | LIT_TEXTO

   82 operador_unario: MENOS
   83                | NEGACAO
   84                | ARROBA

   85 operador_binario: operador_booleano
   86                 | operador_relacional
   87                 | operador_aritmetico

   88 operador_relacional: MENORIGUAL
   89                    | MAIORIQUAL
   90                    | IGUAL
   91                    | DIFERENTE
   92                    | MAIOR
   93                    | MENOR

   94 operador_aritmetico: MULT
   95                    | DIV
   96                    | MOD
   97                    | EXP
   98                    | SUB
   99                    | SOMA

  100 operador_booleano: E_LOG
  101                  | OU_LOG


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 9 32 33 34 35 52 61 62 66 72 76
LIT_TEXTO (259) 81
LIT_BOOL (260) 79
LIT_REAL (261) 78
LIT_INT (262) 53 80
BPRINCIPAL (263) 4
BFUNCOES (264) 55
FUNCAO (265) 9 61
BOOL (266) 51
TEXTO (267) 50
CARACTERE (268) 48
REAL (269) 47
INTEIRO (270) 46
VETOR (271) 49 53
MEU_TIPO (272) 52
CERQUILHA (273)
SE (274) 23
IMPRIME (275) 24
LEIA (276) 25
INCLUIR (277)
PARE (278) 19
ENQUANTO (279) 29 30
PROC (280) 62
PARA (281) 31
EXECUTE (282) 23 29 30 31
SENAO (283) 21 22
CONSTANTE (284)
RETORNE (285) 61
ASPAS_DUPLAS (286)
ASPAS_SIMPLES (287)
LCOLCHETE (288) 53
RCOLCHETE (289) 53
LCHAVE (290) 4 21 23 29 30 31 55 61 62
RCHAVE (291) 4 21 23 29 30 31 55 61 62
LPARENTESES (292) 9 23 24 25 29 30 31 52 72
RPARENTESES (293) 9 23 24 25 29 30 31 52 72
MENORIGUAL (294) 88
MAIORIQUAL (295) 89
IGUAL (296) 90
DIFERENTE (297) 91
MAIOR (298) 92
MENOR (299) 93
ATRIB (300) 32 36
ATRIB_SOMA (301) 37
ATRIB_SUB (302) 38
ATRIB_MULT (303) 39
ATRIB_DIV (304) 40
ATRIB_MOD (305) 41
NEGACAO (306) 83
INC (307) 42
DEC (308) 43
E_LOG (309) 100
OU_LOG (310) 101
ARROBA (311) 70 84
VIRGULA (312) 64 68
PONTOVIRGULA (313) 6 8 31
MULT (314) 94
SUB (315) 98
SOMA (316) 99
DIV (317) 95
MOD (318) 96
EXP (319) 97
MENOS (320) 82


Nonterminals, with rules where they appear

$accept (66)
    on left: 0
programa (67)
    on left: 1, on right: 0
tipos_estruturados (68)
    on left: 2 3, on right: 1 3
bloco_principal (69)
    on left: 4, on right: 1
sentencas (70)
    on left: 5 6, on right: 4 6 21 23 29 30 31 61 62
assinatura_funcoes (71)
    on left: 7 8, on right: 1 8
assinatura_funcao (72)
    on left: 9, on right: 8
sentenca (73)
    on left: 10 11 12, on right: 6
comando (74)
    on left: 13 14 15 16 17, on right: 10
controle (75)
    on left: 18 19, on right: 11
bloco_se (76)
    on left: 20 21 22, on right: 18
se_simplificado (77)
    on left: 23, on right: 20 21 22
imprime (78)
    on left: 24, on right: 16
leia (79)
    on left: 25, on right: 17
repeticao (80)
    on left: 26 27 28, on right: 12
bloco_enquanto (81)
    on left: 29, on right: 26
bloco_faca_enquanto (82)
    on left: 30, on right: 27
bloco_para (83)
    on left: 31, on right: 28
declaracao (84)
    on left: 32 33, on right: 14 31
atribuicao (85)
    on left: 34 35, on right: 15
atribuicao_binaria (86)
    on left: 36 37 38 39 40 41, on right: 34
atribuicao_unaria (87)
    on left: 42 43, on right: 35
tipo (88)
    on left: 44 45, on right: 9 32 33 61 66
tipo_primitivo (89)
    on left: 46 47 48 49 50 51, on right: 44
tipo_estruturado (90)
    on left: 52 53, on right: 3 45
bloco_funcoes (91)
    on left: 54 55, on right: 1
funcoes_proc (92)
    on left: 56, on right: 55
definicoes_funcoes (93)
    on left: 57 58, on right: 56
definicoes_procedimentos (94)
    on left: 59 60, on right: 56
definicao_funcao (95)
    on left: 61, on right: 58
definicao_procedimento (96)
    on left: 62, on right: 60
parametros (97)
    on left: 63 64 65, on right: 9 52 61 62 64 68
parametro (98)
    on left: 66, on right: 64 65
parametros_chamada (99)
    on left: 67 68 69, on right: 72
parametro_chamada (100)
    on left: 70 71, on right: 68 69
chamada_funcao (101)
    on left: 72, on right: 13
expressao (102)
    on left: 73 74 75, on right: 23 24 29 30 31 32 34 74 75
termo (103)
    on left: 76 77, on right: 25 61 70 71 73 75
literal (104)
    on left: 78 79 80 81, on right: 77
operador_unario (105)
    on left: 82 83 84, on right: 74
operador_binario (106)
    on left: 85 86 87, on right: 75
operador_relacional (107)
    on left: 88 89 90 91 92 93, on right: 86
operador_aritmetico (108)
    on left: 94 95 96 97 98 99, on right: 87
operador_booleano (109)
    on left: 100 101, on right: 85


State 0

    0 $accept: . programa $end

    VETOR     shift, and go to state 1
    MEU_TIPO  shift, and go to state 2

    $default  reduce using rule 2 (tipos_estruturados)

    programa            go to state 3
    tipos_estruturados  go to state 4
    tipo_estruturado    go to state 5


State 1

   53 tipo_estruturado: VETOR . LCOLCHETE LIT_INT RCOLCHETE

    LCOLCHETE  shift, and go to state 6


State 2

   52 tipo_estruturado: MEU_TIPO . ID LPARENTESES parametros RPARENTESES

    ID  shift, and go to state 7


State 3

    0 $accept: programa . $end

    $end  shift, and go to state 8


State 4

    1 programa: tipos_estruturados . assinatura_funcoes bloco_principal bloco_funcoes

    FUNCAO  shift, and go to state 9

    $default  reduce using rule 7 (assinatura_funcoes)

    assinatura_funcoes  go to state 10
    assinatura_funcao   go to state 11


State 5

    3 tipos_estruturados: tipo_estruturado . tipos_estruturados

    VETOR     shift, and go to state 1
    MEU_TIPO  shift, and go to state 2

    $default  reduce using rule 2 (tipos_estruturados)

    tipos_estruturados  go to state 12
    tipo_estruturado    go to state 5


State 6

   53 tipo_estruturado: VETOR LCOLCHETE . LIT_INT RCOLCHETE

    LIT_INT  shift, and go to state 13


State 7

   52 tipo_estruturado: MEU_TIPO ID . LPARENTESES parametros RPARENTESES

    LPARENTESES  shift, and go to state 14


State 8

    0 $accept: programa $end .

    $default  accept


State 9

    9 assinatura_funcao: FUNCAO . tipo ID LPARENTESES parametros RPARENTESES

    BOOL       shift, and go to state 15
    TEXTO      shift, and go to state 16
    CARACTERE  shift, and go to state 17
    REAL       shift, and go to state 18
    INTEIRO    shift, and go to state 19
    VETOR      shift, and go to state 20
    MEU_TIPO   shift, and go to state 2

    tipo              go to state 21
    tipo_primitivo    go to state 22
    tipo_estruturado  go to state 23


State 10

    1 programa: tipos_estruturados assinatura_funcoes . bloco_principal bloco_funcoes

    BPRINCIPAL  shift, and go to state 24

    bloco_principal  go to state 25


State 11

    8 assinatura_funcoes: assinatura_funcao . PONTOVIRGULA assinatura_funcoes

    PONTOVIRGULA  shift, and go to state 26


State 12

    3 tipos_estruturados: tipo_estruturado tipos_estruturados .

    $default  reduce using rule 3 (tipos_estruturados)


State 13

   53 tipo_estruturado: VETOR LCOLCHETE LIT_INT . RCOLCHETE

    RCOLCHETE  shift, and go to state 27


State 14

   52 tipo_estruturado: MEU_TIPO ID LPARENTESES . parametros RPARENTESES

    BOOL       shift, and go to state 15
    TEXTO      shift, and go to state 16
    CARACTERE  shift, and go to state 17
    REAL       shift, and go to state 18
    INTEIRO    shift, and go to state 19
    VETOR      shift, and go to state 20
    MEU_TIPO   shift, and go to state 2

    $default  reduce using rule 63 (parametros)

    tipo              go to state 28
    tipo_primitivo    go to state 22
    tipo_estruturado  go to state 23
    parametros        go to state 29
    parametro         go to state 30


State 15

   51 tipo_primitivo: BOOL .

    $default  reduce using rule 51 (tipo_primitivo)


State 16

   50 tipo_primitivo: TEXTO .

    $default  reduce using rule 50 (tipo_primitivo)


State 17

   48 tipo_primitivo: CARACTERE .

    $default  reduce using rule 48 (tipo_primitivo)


State 18

   47 tipo_primitivo: REAL .

    $default  reduce using rule 47 (tipo_primitivo)


State 19

   46 tipo_primitivo: INTEIRO .

    $default  reduce using rule 46 (tipo_primitivo)


State 20

   49 tipo_primitivo: VETOR .
   53 tipo_estruturado: VETOR . LCOLCHETE LIT_INT RCOLCHETE

    LCOLCHETE  shift, and go to state 6

    $default  reduce using rule 49 (tipo_primitivo)


State 21

    9 assinatura_funcao: FUNCAO tipo . ID LPARENTESES parametros RPARENTESES

    ID  shift, and go to state 31


State 22

   44 tipo: tipo_primitivo .

    $default  reduce using rule 44 (tipo)


State 23

   45 tipo: tipo_estruturado .

    $default  reduce using rule 45 (tipo)


State 24

    4 bloco_principal: BPRINCIPAL . LCHAVE sentencas RCHAVE

    LCHAVE  shift, and go to state 32


State 25

    1 programa: tipos_estruturados assinatura_funcoes bloco_principal . bloco_funcoes

    BFUNCOES  shift, and go to state 33

    $default  reduce using rule 54 (bloco_funcoes)

    bloco_funcoes  go to state 34


State 26

    8 assinatura_funcoes: assinatura_funcao PONTOVIRGULA . assinatura_funcoes

    FUNCAO  shift, and go to state 9

    $default  reduce using rule 7 (assinatura_funcoes)

    assinatura_funcoes  go to state 35
    assinatura_funcao   go to state 11


State 27

   53 tipo_estruturado: VETOR LCOLCHETE LIT_INT RCOLCHETE .

    $default  reduce using rule 53 (tipo_estruturado)


State 28

   66 parametro: tipo . ID

    ID  shift, and go to state 36


State 29

   52 tipo_estruturado: MEU_TIPO ID LPARENTESES parametros . RPARENTESES

    RPARENTESES  shift, and go to state 37


State 30

   64 parametros: parametro . VIRGULA parametros
   65           | parametro .

    VIRGULA  shift, and go to state 38

    $default  reduce using rule 65 (parametros)


State 31

    9 assinatura_funcao: FUNCAO tipo ID . LPARENTESES parametros RPARENTESES

    LPARENTESES  shift, and go to state 39


State 32

    4 bloco_principal: BPRINCIPAL LCHAVE . sentencas RCHAVE

    ID         shift, and go to state 40
    BOOL       shift, and go to state 15
    TEXTO      shift, and go to state 16
    CARACTERE  shift, and go to state 17
    REAL       shift, and go to state 18
    INTEIRO    shift, and go to state 19
    VETOR      shift, and go to state 20
    MEU_TIPO   shift, and go to state 2
    SE         shift, and go to state 41
    IMPRIME    shift, and go to state 42
    LEIA       shift, and go to state 43
    PARE       shift, and go to state 44
    ENQUANTO   shift, and go to state 45
    PARA       shift, and go to state 46
    EXECUTE    shift, and go to state 47

    $default  reduce using rule 5 (sentencas)

    sentencas            go to state 48
    sentenca             go to state 49
    comando              go to state 50
    controle             go to state 51
    bloco_se             go to state 52
    se_simplificado      go to state 53
    imprime              go to state 54
    leia                 go to state 55
    repeticao            go to state 56
    bloco_enquanto       go to state 57
    bloco_faca_enquanto  go to state 58
    bloco_para           go to state 59
    declaracao           go to state 60
    atribuicao           go to state 61
    tipo                 go to state 62
    tipo_primitivo       go to state 22
    tipo_estruturado     go to state 23
    chamada_funcao       go to state 63


State 33

   55 bloco_funcoes: BFUNCOES . LCHAVE funcoes_proc RCHAVE

    LCHAVE  shift, and go to state 64


State 34

    1 programa: tipos_estruturados assinatura_funcoes bloco_principal bloco_funcoes .

    $default  reduce using rule 1 (programa)


State 35

    8 assinatura_funcoes: assinatura_funcao PONTOVIRGULA assinatura_funcoes .

    $default  reduce using rule 8 (assinatura_funcoes)


State 36

   66 parametro: tipo ID .

    $default  reduce using rule 66 (parametro)


State 37

   52 tipo_estruturado: MEU_TIPO ID LPARENTESES parametros RPARENTESES .

    $default  reduce using rule 52 (tipo_estruturado)


State 38

   64 parametros: parametro VIRGULA . parametros

    BOOL       shift, and go to state 15
    TEXTO      shift, and go to state 16
    CARACTERE  shift, and go to state 17
    REAL       shift, and go to state 18
    INTEIRO    shift, and go to state 19
    VETOR      shift, and go to state 20
    MEU_TIPO   shift, and go to state 2

    $default  reduce using rule 63 (parametros)

    tipo              go to state 28
    tipo_primitivo    go to state 22
    tipo_estruturado  go to state 23
    parametros        go to state 65
    parametro         go to state 30


State 39

    9 assinatura_funcao: FUNCAO tipo ID LPARENTESES . parametros RPARENTESES

    BOOL       shift, and go to state 15
    TEXTO      shift, and go to state 16
    CARACTERE  shift, and go to state 17
    REAL       shift, and go to state 18
    INTEIRO    shift, and go to state 19
    VETOR      shift, and go to state 20
    MEU_TIPO   shift, and go to state 2

    $default  reduce using rule 63 (parametros)

    tipo              go to state 28
    tipo_primitivo    go to state 22
    tipo_estruturado  go to state 23
    parametros        go to state 66
    parametro         go to state 30


State 40

   34 atribuicao: ID . atribuicao_binaria expressao
   35           | ID . atribuicao_unaria
   72 chamada_funcao: ID . LPARENTESES parametros_chamada RPARENTESES

    LPARENTESES  shift, and go to state 67
    ATRIB        shift, and go to state 68
    ATRIB_SOMA   shift, and go to state 69
    ATRIB_SUB    shift, and go to state 70
    ATRIB_MULT   shift, and go to state 71
    ATRIB_DIV    shift, and go to state 72
    ATRIB_MOD    shift, and go to state 73
    INC          shift, and go to state 74
    DEC          shift, and go to state 75

    atribuicao_binaria  go to state 76
    atribuicao_unaria   go to state 77


State 41
